objects/Order__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accounting_Date__c</fullName>
        <description>Proforce Dev 0911514</description>
        <inlineHelpText>Accounting Date</inlineHelpText>
        <label>Accounting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Adjustments__c</fullName>
        <description>Proforce Dev 091514</description>
        <inlineHelpText>Adjustments</inlineHelpText>
        <label>Adjustments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Proforce Dev 091514</description>
        <inlineHelpText>PM Assigned To</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booked_Amount__c</fullName>
        <label>Booked Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_No__c</fullName>
        <description>Proforce Dev 091514</description>
        <inlineHelpText>Contract No</inlineHelpText>
        <label>Contract No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>PS Orders</relationshipLabel>
        <relationshipName>PS_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Corporate__c</fullName>
        <label>Customer Corporate</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <description>Proforce Dev 091514</description>
        <inlineHelpText>Customer Name</inlineHelpText>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Region__c</fullName>
        <formula>Country__r.Global_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Subregion__c</fullName>
        <formula>Country__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User Subregion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User__c</fullName>
        <description>proforce dev 91514</description>
        <inlineHelpText>End User</inlineHelpText>
        <label>End User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FY__c</fullName>
        <label>FY</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Class_No__c</fullName>
        <label>Item Class No</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Net_Sum__c</fullName>
        <description>proforce Dev 091514</description>
        <inlineHelpText>Order Net Sum in Local Currency</inlineHelpText>
        <label>Order Net Sum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Media__c</fullName>
        <description>proforce dev 091514</description>
        <inlineHelpText>Media</inlineHelpText>
        <label>Media</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Networking__c</fullName>
        <description>Proforce Dev 091514</description>
        <inlineHelpText>Networking</inlineHelpText>
        <label>Networking</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ORD_UID__c</fullName>
        <externalId>true</externalId>
        <label>ORD UID</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Old_Project__c</fullName>
        <label>Old Project</label>
        <referenceTo>Milestone1_Project__c</referenceTo>
        <relationshipLabel>PS Orders</relationshipLabel>
        <relationshipName>PS_Orders2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order_Booked__c</fullName>
        <description>Proforce Dev 091514</description>
        <inlineHelpText>Order Booked</inlineHelpText>
        <label>Order Booked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Currency__c</fullName>
        <description>proforce dev 091514</description>
        <inlineHelpText>Order Currency</inlineHelpText>
        <label>Order Currency</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_No_Link__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_310, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_310)) 
&amp; Id , TRIM(Order_No__c) , &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_No__c</fullName>
        <label>Order Number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Notes__c</fullName>
        <description>Order Notes</description>
        <inlineHelpText>Order Notes</inlineHelpText>
        <label>Order Notes</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_Oracle_Customer_Number__c</fullName>
        <description>proforce dev 091514</description>
        <inlineHelpText>Order Oracle Customer Number</inlineHelpText>
        <label>Order Oracle Customer Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Rev_Rec_Date__c</fullName>
        <description>Proforce Dev 091415</description>
        <inlineHelpText>Order Rev Rec Date</inlineHelpText>
        <label>Order Rev Rec Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <description>pro force dev 091514</description>
        <inlineHelpText>Order Status</inlineHelpText>
        <label>Order Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Title__c</fullName>
        <description>Order Title</description>
        <inlineHelpText>Order Title</inlineHelpText>
        <label>Order Title</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <description>Proforce Dev 091514</description>
        <inlineHelpText>Order Type</inlineHelpText>
        <label>Order Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Orig_Rev_Rec_Date__c</fullName>
        <description>proforce Dev 091514</description>
        <inlineHelpText>PM Orig Rev Rec Date</inlineHelpText>
        <label>PM Orig Rev Rec Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PM_Reason_Revised_Rev_Rec_Date__c</fullName>
        <description>Pro Force Dev 091514</description>
        <inlineHelpText>PM Reason Revised Rev Rec Date</inlineHelpText>
        <label>PM Reason Revised Rev Rec Date</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PM_Revised_Rev_Rec_Date__c</fullName>
        <description>proforce dev 091514</description>
        <inlineHelpText>PM Revised Rev Rec Date</inlineHelpText>
        <label>PM Revised Rev Rec Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Playout__c</fullName>
        <description>proforce dev 091514</description>
        <inlineHelpText>Playout</inlineHelpText>
        <label>Playout</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchased_Order__c</fullName>
        <description>proforce dev 091514</description>
        <inlineHelpText>Purchased Order</inlineHelpText>
        <label>Purchased Order</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTR__c</fullName>
        <label>QTR</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <description>Proforce Dev 091514</description>
        <inlineHelpText>Service</inlineHelpText>
        <label>Service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Top_Hierarchy_Customer_Name__c</fullName>
        <description>proforce dev 091514</description>
        <inlineHelpText>Top Hierarchy Customer Name</inlineHelpText>
        <label>Top Hierarchy Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transmission__c</fullName>
        <description>proforce dev 091514</description>
        <inlineHelpText>Transmission</inlineHelpText>
        <label>Transmission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>USD_Net_Net_Sum__c</fullName>
        <label>USD Net Net Sum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>USD_Net_Sum__c</fullName>
        <description>Proforce Dev</description>
        <inlineHelpText>USD Net Sum</inlineHelpText>
        <label>USD Net Sum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>PS Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Order_No_Link__c</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Expanded_Order_Info</fullName>
        <columns>NAME</columns>
        <columns>Customer_Name__c</columns>
        <columns>Customer_Corporate__c</columns>
        <columns>Order_No__c</columns>
        <columns>Order_Oracle_Customer_Number__c</columns>
        <columns>Purchased_Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>Expanded Order Info</label>
    </listViews>
    <nameField>
        <displayFormat>Ord-{000000}</displayFormat>
        <label>Order Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PS Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>